# hipparchus

./: .gitignore  BACKLOG,md  CHANGELOG,md  CHANGELOG.md  Cargo.toml  ENLISTMENT.md  README.md  RELEASE.md  ROADMAP.md
.archive/: derive.rs  simple.rs
.archive/sequence/: catalan.rs  fibonacci.rs  lookandsay.rs
.github/workflows/: bench.yml  ci.yml  codecov.yml  cov.yml
crates/hipparchus/: Cargo.toml
crates/hipparchus-az/: Cargo.toml
crates/hipparchus-az/src/: angle.rs  azimuth.rs  azimuth_norm.rs  azimuth_ops.rs  azimuth_trig.rs  degrees.rs  dms.rs  lib.rs  modulo.rs  radians.rs  sign.rs  trig.rs  unit.rs
crates/hipparchus-distance/: Cargo.toml
crates/hipparchus-distance/src/: lib.rs
crates/hipparchus-geo/: Cargo.toml
crates/hipparchus-geo/src/: angle.rs  coord.rs  direction.rs  dms.rs  ellipsoid.rs  latlon.rs  lib.rs  orientation.rs  sign.rs  trig.rs  unit.rs  wgs84.rs  zone.rs
crates/hipparchus-geo/src/coords/: coord.rs  iso6709.rs  latlon.rs  mod.rs  nmea0183.rs  orientation.rs  zone.rs
crates/hipparchus-geo/src/earth/: auxiliary.rs  ellipsoid.rs  geometry.rs  metrics.rs  mod.rs  models.rs
crates/hipparchus-geo/src/geodesic/: README.txt  caps.rs  coeff.rs  constants.rs  core.rs  direct.rs  inverse.rs  line.rs  math.rs  mod.rs  polygon.rs  trig.rs
crates/hipparchus-geo/tests/: geodesic.rs
crates/hipparchus-mean/: Cargo.toml
crates/hipparchus-mean/benches/: mean.rs  norm.rs  sequence.rs
crates/hipparchus-mean/src/: angle.rs  geometric.rs  lib.rs  lpnorm.rs  mean.rs  modulo.rs  movingavg.rs  power.rs  sequence.rs  two.rs  value.rs
crates/hipparchus-mean/src/mean/: arithmetic.rs  geometric.rs  harmonic.rs  mod.rs  quadratic.rs  traits.rs
crates/hipparchus-mean/src/moving/: cumulative.rs  exponential.rs  mod.rs  simple.rs  traits.rs  weighted.rs
crates/hipparchus-mean/src/movingavg/: cumulative.rs  exponential.rs  mod.rs  simple.rs  weighted.rs
crates/hipparchus-mean/src/norm/: l0norm.rs  l1norm.rs  l2norm.rs  lpnorm.rs  lpnorm_inf.rs  mod.rs  traits.rs
crates/hipparchus-mean/src/sequence/: arithmetic.rs  derive.rs  geometric.rs  mod.rs  padova.rs
crates/hipparchus-metrics/: Cargo.toml
crates/hipparchus-metrics/src/: distribution.rs  earth.rs  lib.rs  metrics.rs  point.rs  sampling.rs  set.rs  sortedvec.rs  text.rs  vector.rs
crates/hipparchus-metrics/src/distribution/: hellinger.rs  jensen_shannon.rs  mod.rs
crates/hipparchus-metrics/src/geo/: haversine.rs
crates/hipparchus-metrics/src/point/: gower.rs  mod.rs
crates/hipparchus-metrics/src/sampling/: bray_curtis.rs  mod.rs
crates/hipparchus-metrics/src/set/: jaccard.rs  sorensen.rs  sortedvec.rs
crates/hipparchus-metrics/src/text/: mod.rs
crates/hipparchus-metrics/src/vector/: cosine.rs  dotproduct.rs
crates/hipparchus-nt/: Cargo.toml  README.md
crates/hipparchus-nt/src/: arithmatic.rs  bitwise.rs  convert.rs  lib.rs  nt.rs  op_binary.rs  op_unary.rs
crates/hipparchus-seq/: Cargo.toml  README.md
crates/hipparchus-seq/benches/: sequence.rs
crates/hipparchus-seq/src/: lib.rs
crates/hipparchus-space/: Cargo.toml
crates/hipparchus-space/src/: gower.rs  lib.rs  minkowski.rs
crates/hipparchus-space/src/geo/: haversine.rs  mod.rs  vincenty.rs
crates/hipparchus-space/src/point/: gower.rs  mod.rs
crates/hipparchus-stats/: Cargo.toml
crates/hipparchus-stats/src/: lib.rs
crates/hipparchus-stats/src/distribution/: crossentropy.rs  harmonicmean.rs  kullback_leibler.rs  mod.rs
crates/hipparchus-stats/src/set/: mod.rs
crates/hipparchus-text/: Cargo.toml
crates/hipparchus-text/src/: levenshtein.rs
crates/hipparchus-vector/: Cargo.toml
crates/hipparchus/src/: lib.rs
doc/: LABEL.md  MILESTONE.md  MILESTONES.md  README.md  ROADMAP.md
doc/.archive/: direction.rs  factorial.rs  haversine.rs  rustfmt.toml  vincenty.rs
doc/blog/: rust.cargo.md  rust.issues.md  rust.macro.md  rust.oop.md  rust.test.md
doc/issues/: issue.rust.md
hipparchus/: Cargo.toml
hipparchus/src/: lib.rs
hipparchus/src/distribution/: jsd.rs
hipparchus/src/simularity/: cosine.rs
hipparchus/src/space/: canberra.rs  mod.rs
hipparchus/src/text/: hamming.rs  mod.rs
src/distribution/: kld.rs  mod.rs
src/simularity/: mod.rs
src/space/: chebyshev.rs  euclidean.rs  mahalanobis.rs  manhattan.rs
src/sphere/: geo.rs  mod.rs  vincenty.rs
xtask/: Cargo.toml
xtask/src/: main.rs
