[workspace]
resolver = "2"
members = [
  "crates/*",
  "xtask",
]

[workspace.package]
edition = "2021"
rust-version = "1.70.0"
version = "0.1.0"
authors = ["Vrman.G.Yang <vrmanx@qq.com>"]
readme = "README.md"
homepage = "https://github.com/web3nemo/hipparchus"
repository = "https://github.com/web3nemo/hipparchus"
documentation = "https://example.com/bar"
license = "MIT"
license-file = "https://github.com/web3nemo/hipparchus/LICENSE"
categories = ["algorithms", "mathematics"]

[workspace.dependencies]
