[package]
name = "hipparchus"
version = "0.1.0"
edition = "2021"
readme = "README.md"
description = "Implement various distance calculation methods."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.1"
ndarray = "0.15.6"
ndarray-inverse = "0.1.9"

[dev-dependencies]
float-cmp = "0.9.0"
cargo-llvm-cov = "0.5.35"
