[package]
edition.workspace = true
rust-version.workspace = true
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
categories.workspace = true
name = "hipparchus-az"
description = "Utility for angle representation, conversion and calculations"
readme = "README.md"
keywords = ["mean", "lpnorm", "moving-average", "sequence"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hipparchus-mean = { path = "../hipparchus-mean" }
num = { workspace = true }
num_enum = { workspace = true }
float-cmp = { workspace = true }

[build-dependencies]

[dev-dependencies]
rstest ={ workspace = true }
criterion = { workspace = true, features = ["html_reports"]}
