[package]
edition.workspace = true
rust-version.workspace = true
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
categories.workspace = true
name = "hipparchus-geo"
description = "<!-- TODO -->"
readme = "README.md"
keywords = ["latlon", "wgs84", "haversine", "vincenty", "ISO-6790", "NMEA-0183"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hipparchus-mean = { path = "../hipparchus-mean" }
num = { workspace = true }
num_enum = { workspace = true }
float-cmp = { workspace = true }

[build-dependencies]

[dev-dependencies]
rstest = { workspace = true }
criterion = { workspace = true, features = ["html_reports"]}
