[package]
edition.workspace = true
rust-version.workspace = true
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
categories.workspace = true
name = "hipparchus-geo"
description = "Utility for latlon, ellipisoid & geodesic calculations."
readme = "README.md"
keywords = ["wgs84", "haversine", "geodesic", "ISO-6790", "NMEA-0183"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hipparchus-mean = { path = "../hipparchus-mean", version = "0.1" }
hipparchus-az = { path = "../hipparchus-az", version = "0.1" }
num = { workspace = true }
num_enum = { workspace = true }
float-cmp = { workspace = true }
bitflags = {workspace = true}
once_cell = { workspace = true }


[build-dependencies]

[dev-dependencies]
rstest = { workspace = true }
criterion = { workspace = true, features = ["html_reports"]}
