[package]
edition.workspace = true
rust-version.workspace = true
version.workspace = true
authors.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
license.workspace = true
categories.workspace = true
name = "hipmean"
description = "A collection of basic mathmatics solver: Lp norm, mean, moving average..."
keywords = ["mean", "lpnorm", "moving average"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = { workspace = true }
float-cmp = { workspace = true }

[dev-dependencies]
cargo-llvm-cov.workspace = true

[build-dependencies]
