[package]
edition.workspace = true
rust-version.workspace = true
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
categories.workspace = true
name = "hipparchus-metrics"
description = "A collection of distance metrics..."
readme = "README.md"
keywords = ["distance", "metrics", "stats", "text"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hipparchus-mean = { path = "../hipparchus-mean" }
hipparchus-geo = { path = "../hipparchus-geo" }
num = { workspace = true }
float-cmp = { workspace = true }

[build-dependencies]

[dev-dependencies]
rstest = { workspace = true }
