[package]
edition.workspace = true
rust-version.workspace = true
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
categories.workspace = true
name = "hipparchus-nt"
description = "Utilities to create wrapped newtype and implement precluded operations and traits easily."
readme = "README.md"
keywords = ["newtype", "wrap", "wrapper"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
#proc-macro = true

[dependencies]
num = { workspace = true }
num_enum = { workspace = true }
derive_more = "0.99.17"

[build-dependencies]

[dev-dependencies]
rstest ={ workspace = true }
