[package]
edition.workspace = true
rust-version.workspace = true
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
categories.workspace = true
name = "hipparchus-seq"
description = "Utility to generate various sequences defined in mathematics"
readme = "README.md"
keywords = ["mean", "lpnorm", "moving-average", "sequence"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = { workspace = true }
float-cmp = { workspace = true }
bitflags = {workspace = true}
once_cell = { workspace = true }

[build-dependencies]

[dev-dependencies]
rstest ={ workspace = true }
criterion = { workspace = true, features = ["html_reports"]}

[[bench]]
name = "sequence"
harness = false
