[package]
name = "hipparchus-space"
version = "0.1.0"
edition = "2021"
readme = "README.md"
description = "Various space distance calculation on n-dimension f32/f64 points"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.1"
hipparchus-mean = { path = "../hipparchus-mean" }

[dev-dependencies]
float-cmp = "0.9.0"
cargo-llvm-cov = "0.5.35"
