[package]
edition.workspace = true
rust-version.workspace = true
version.workspace = true
authors.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
license.workspace = true
categories.workspace = true
name = "hipparchus-space"
description = "Various distance metrics for n-dimension f32/f64 points"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hipparchus-mean = { path = "../hipparchus-mean" }
num = { workspace = true }
float-cmp = { workspace = true }

[build-dependencies]

[dev-dependencies]
cargo-llvm-cov.workspace = true
