[package]
edition.workspace = true
rust-version.workspace = true
version.workspace = true
authors.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
license.workspace = true
categories.workspace = true

name = "hipparchus-text"
description = "Various distance metrics for string or text"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = { workspace = true }
float-cmp = { workspace = true }

[build-dependencies]

[dev-dependencies]
cargo-llvm-cov.workspace = true
