[package]
edition.workspace = true
rust-version.workspace = true
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
categories.workspace = true
name = "hipparchus"
description = "<!-- TODO -->"
readme = "README.md"
keywords = ["mean", "geo", "metrics"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hipparchus-mean = { path = "../hipparchus-mean" }
hipparchus-geo = { path = "../hipparchus-geo" }
hipparchus-metrics = { path = "../hipparchus-metrics" }

[build-dependencies]

[dev-dependencies]
