[package]
edition.workspace = true
rust-version.workspace = true
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
categories.workspace = true
name = "hipparchus"
description = "<!-- TODO -->"
readme = "README.md"
keywords = ["math", "geo", "metrics"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hipparchus-nt = { path = "../hipparchus-nt", version = "0.1" }
hipparchus-mean = { path = "../hipparchus-mean", version = "0.1" }
hipparchus-seq = { path = "../hipparchus-seq", version = "0.1" }
hipparchus-az = { path = "../hipparchus-az", version = "0.1" }
hipparchus-geo = { path = "../hipparchus-geo", version = "0.1" }
hipparchus-metrics = { path = "../hipparchus-metrics", version = "0.1" }

[build-dependencies]

[dev-dependencies]
